test_data/streamwalk/valid/basic/02_true.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

true

# EXPECTED

TRUE
END_DOCUMENT
