test_data/streamwalk/invalid/syntax/03_unexpected_character.case
# OPTIONS

MODE: AJIS
COMMENTS: off
DIRECTIVES: off
IDENTIFIERS: off
MAX_DEPTH: 64
MAX_TOKEN_BYTES: 1048576

# INPUT

]

# EXPECTED

ERROR UnexpectedCharacter offset=0
